[gd_scene load_steps=21 format=2]

[ext_resource path="res://Scripts/UI/StartMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/PixelFont.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/PixelFont.tres" type="Theme" id=3]
[ext_resource path="res://Assets/Sound/powerUp2.ogg" type="AudioStream" id=4]
[ext_resource path="res://Assets/Tilemap.png" type="Texture" id=5]
[ext_resource path="res://Actors/Enemies/Enemy.tscn" type="PackedScene" id=6]


[sub_resource type="DynamicFont" id=13]
size = 71
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxLine" id=14]
color = Color( 1, 1, 1, 1 )
grow_begin = 2.0
thickness = 10

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFont" id=3]
size = 72
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 34
font_data = ExtResource( 2 )

[sub_resource type="StreamTexture" id=5]
load_path = "res://.import/DancingPlayer.png-346429216746cae49a837f32050e60ce.stex"

[sub_resource type="Animation" id=6]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 17.0 ]
}

[sub_resource type="Animation" id=7]
length = 2.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2, 2.4, 2.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6.0, 7.0, 8.0, 9.0, 10.0, 9.0, 10.0, 11.0, 10.0, 9.0, 10.0, 9.0, 8.0, 7.0 ]
}

[sub_resource type="Animation" id=8]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12.0, 13.0, 13.0, 14.0 ]
}

[sub_resource type="Animation" id=9]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0.0, 1.0, 2.0 ]
}

[sub_resource type="Animation" id=10]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 15.0, 16.0 ]
}

[sub_resource type="Animation" id=11]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 3.0, 4.0, 5.0 ]
}

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 10, 51.2 )

[sub_resource type="TileSet" id=12]
0/name = "Tilemap.png 0"
0/texture = ExtResource( 5 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 160, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[node name="StartMenu" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -37.0
margin_top = -43.0
margin_right = 299.0
margin_bottom = 101.0
rect_scale = Vector2( 4.56, 6.32 )
color = Color( 0.129412, 0.129412, 0.137255, 1 )

[node name="MenuItems" type="VBoxContainer" parent="."]
modulate = Color( 0.972656, 0.970903, 0.961258, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 172.0
margin_top = 164.0
margin_right = 612.0
margin_bottom = 420.0
theme = ExtResource( 3 )

[node name="Label" type="Label" parent="MenuItems"]
margin_right = 621.0
margin_bottom = 99.0
custom_fonts/font = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
text = "FALLING DICE"

[node name="Start" type="Button" parent="MenuItems"]
margin_top = 103.0
margin_right = 621.0
margin_bottom = 199.0
focus_neighbour_top = NodePath("../Exit")
theme = SubResource( 1 )
custom_fonts/font = SubResource( 3 )
text = "START"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="MenuItems"]
margin_top = 203.0
margin_right = 621.0
margin_bottom = 252.0
focus_neighbour_bottom = NodePath("../Start")
custom_fonts/font = SubResource( 2 )
text = "EXIT"
flat = true
expand_icon = true

[node name="Buttonsound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1032, 568 )
scale = Vector2( 6, 6 )
texture = SubResource( 5 )
hframes = 5
vframes = 4
frame = 10
__meta__ = {
"_editor_description_": "YXNlcHJpdGVfd2l6YXJkX2NvbmZpZwpwbGF5ZXJ8PUFuaW1hdGlvblBsYXllcgpzb3VyY2V8PUM6L1VzZXJzL21pbGtkL09uZURyaXZlL0JpbGRlci9hcnQvQXNlc3ByaXRlL1Byb2plY3RzL0tvc3VpSmFtMDNfR01USzIwMjIvUGxheWVyLmFzZXByaXRlCmxheWVyfD1QbGF5ZXIKb3BfZXhwfD1GYWxzZQpvX2ZvbGRlcnw9Cm9fbmFtZXw9RGFuY2luZwpvbmx5X3Zpc2libGV8PUZhbHNlCm9fZXhfcHw9Cg=="
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Player_Dancing"
anims/Player_Damage = SubResource( 6 )
anims/Player_Dancing = SubResource( 7 )
anims/Player_Fall = SubResource( 8 )
anims/Player_Idle = SubResource( 9 )
anims/Player_Jump = SubResource( 10 )
anims/Player_Run = SubResource( 11 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
scale = Vector2( 5, 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 16, 41.6 )
scale = Vector2( 1, 1 )
shape = SubResource( 15 )

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
scale = Vector2( 5, 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2( 220.8, 44.8 )
scale = Vector2( 1, 1 )
shape = SubResource( 15 )

[node name="Node2D" parent="." instance=ExtResource( 6 )]
position = Vector2( 928, 184 )
scale = Vector2( 6, 6 )

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2( 5, 5 )
tile_set = SubResource( 12 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 589818, 0, 0, 589819, 0, 0, 589820, 0, 0, 589821, 0, 0, 589822, 0, 0, 589823, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 0, 524306, 0, 0, 524307, 0, 0, 524308, 0, 0, 524309, 0, 0 )

[connection signal="focus_exited" from="MenuItems/Start" to="." method="_on_Start_focus_exited"]
[connection signal="pressed" from="MenuItems/Start" to="." method="_on_Start_pressed"]
[connection signal="focus_exited" from="MenuItems/Exit" to="." method="_on_Exit_focus_exited"]
[connection signal="pressed" from="MenuItems/Exit" to="." method="_on_Exit_pressed"]
